_includes/styles/comlib.css
{% comment %}
//
// Programmer:    Craig Stuart Sapp <craig@ccrma.stanford.edu>
// Creation Date: Sun May 29 12:44:57 PDT 2022
// Last Modified: Sun May 29 12:45:00 PDT 2022
// Filename:      _includes/styles/comlib.css
// Included in:   _includes/styles/main.html
// Syntax:        CSS
// vim:           ts=3:nowrap
//
// Description:   Styles for work composer/library area.
//
{% endcomment %}


#comlib {
	height: 141px;
	margin-top: 0;
	text-shadow: 0px 0px 1px #999999;
	margin: 0px auto;
	display: flex;
	justify-content: space-around;
	align-items: center;
	max-width: {{ site.max_content_width }};
	padding-top: 0px;
	padding-bottom: 0px;
	padding-left: 15px;
	padding-right: 15px;
	flex-wrap: wrap;
	flex: 1 0 auto;
	background: {{ site.tertiary_color }};
}


#work-library-name a {
	font-size: 1.3rem;
	color: black;
}


.comlib-line2 {
	margin-top: -8px;
	min-height: 22.5px;  /* needed to keep constant height for composers' dates if empty */
}


#work-library-name a:hover {
	font-size: 1.3rem;
	color: {{ site.secondary_color }};
}


#library-portrait .st0:hover {
	fill: {{ site.secondary_color }};
}


#composer-links {
	padding-left: 5px;
}


#work-scans svg {
	fill: {{ site.secondary_color }};
}


#work-scans svg:hover {
	fill: {{ site.primary_color }};
}


#tool-workinfo {
	height: 110px;
	min-height: 110px;
	margin-top: 0;
	width: 100%;
	padding: 0px;
	max-width: 800px;
}


#work-library-name, #browse-library-name {
	font-size: 1.10rem;
}


#work-library-name a, #browse-library-name a {
	text-decoration: none;
}


#work-shelfmark {
	font-size: 0.95rem;
}


.image-scan {
	font-size: 1.75rem;
}


.image-scan:hover {
   color: {{ site.button_hover_color }};
}


.ssm:after { /* siglum-shelfmark: A siglum at the start of a shelfmark */
	content: ":";
}


#composer-name {
	font-size: 1.3rem;
	color: black;
}

